<resources>
    <string name="app_name">爱验机</string>
    <string name="title_home">首页</string>
    <string name="title_dashboard">检测</string>
    <string name="title_notifications">我的</string>
    <string name="about_us_tip1">爱验机为大家提供免费的验机评估平台。手机回收先用爱验机！</string>
    <string name="about_us_tip2">地址：重庆市渝中区大坪百盛1号楼412</string>
    <string name="about_us_tip3">全国合作电话：023-68595677</string>
    <string name="custom_tele">023-68595677</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="all_cash_out_tip">可提现余额 ¥ %s</string>
    <string name="cash_account">收款账户: %s</string>
    <string name="cash_to_wx">请在我的钱包零钱中查看余额</string>
    <string name="cash_to_account_check">审核通过后，1个工作日内到账</string>
    <string name="recycle_dingdan_success">订单提交成功</string>
    <string name="recycle_dingdan_success_tip">请将此次评估手机寄到以下地址，并在我的订单内填写快递单号。</string>
    <string name="order_address">重庆市渝中区大坪百盛1号楼412</string>
    <string name="shop_name">店铺： %s</string>
    <string name="shop_open_time">营业时间： %s</string>
    <string name="shop_tele">电话： %s</string>
    <string name="deal_num">成交数： %s</string>
    <string name="shop_addr">地址：%s</string>
    <string name="shopper_count">店员人数： %s</string>
    <string name="admin_count">管理员人数： %s</string>
    <string name="order_ems_name">快递公司： %s</string>
    <string name="order_ems_address">快递单号： %s</string>
    <string name="order_price_value">¥ %s</string>
    <string name="result_price_tip">(%s)</string>
    <string name="my_user_count">我的用户 %s</string>


    <string name="cancel">取消</string>
    <string name="photo">拍照</string>
    <string name="choose_from_album">从相册选择</string>
    <string name="open_camera_rights">开启相机权限</string>
    <string name="setting">设置</string>

    <string name="unable_to_find_system_album">无法找到系统相册</string>


    <string name="single_mode">"单项模式"</string>
    <string name="test_list_empty">"没有测试项"</string>
    <string name="pass_text">"通过"</string>
    <string name="fail_text">"失败"</string>
    <string name="exit_text">"退出"</string>

    <!-- version -->
    <string name="version_title">"版本信息"</string>
    <string name="version_software_desc">"下面显示的是软件版本信息"</string>
    <string name="version_software_codename">"CodeName："</string>
    <string name="version_software_incremental">"Incremental："</string>
    <string name="version_software_release">"Release："</string>
    <string name="version_software_sdk">"SDK："</string>
    <string name="version_software_baseband">"基带版本："</string>
    <string name="version_software_display">"版本号："</string>
    <string name="version_hardware_desc">"下面显示的是硬件版本信息"</string>
    <string name="version_hardware_board">"Board："</string>
    <string name="version_hardware_model">"Model："</string>
    <string name="version_hardware_device">"Device："</string>
    <string name="version_hardware_manufacture">"Manufacture："</string>

    <!-- lcd -->
    <string name="lcd_title">"LCD测试"</string>
    <string name="lcd_desc">"屏幕会显示不同颜色，请检查屏幕是否有黑点和亮点，点击屏幕开始"</string>

    <!-- backlight -->
    <string name="backlight_title">"背光和键盘灯测试"</string>
    <string name="backlight_desc">"请检查背光灯和按键灯是否正常，点击屏幕开始"</string>
    <string name="backlight_on">"背光和键盘灯开启"</string>
    <string name="backlight_off">"背光和键盘灯关闭"</string>
    <string name="backlight_def">"背光和键盘灯恢复"</string>

    <!-- receiver -->
    <string name="receiver_title">"听筒测试"</string>
    <string name="receiver_desc">"请检查听筒是否有声音，点击屏幕开始"</string>

    <!-- speaker -->
    <string name="speaker_title">"喇叭测试"</string>
    <string name="speaker_desc">"请检查喇叭是否有声音，点击屏幕开始"</string>

    <!-- earphone -->
    <string name="earphone_title">"耳机测试"</string>
    <string name="earphone_plug_in">"请插入耳机"</string>
    <string name="earphone_press_hook">"请进行耳机回环测试，按下耳机挂机键完成"</string>

    <!-- fmradio -->
    <string name="fmradio_title">"收音机测试"</string>
    <string name="fmradio_desc">"收音机测试，点击屏幕开始"</string>
    <string name="fmradio_notfound">"未找到收音机测试"</string>

    <!-- key -->
    <string name="key_title">"按键测试"</string>
    <string name="key_desc">"下面显示的是当前按下的按键，部分系统按键会被截获，如HOME和POWER键"</string>

    <!-- vibrator -->
    <string name="vibrator_title">"震动测试"</string>
    <string name="vibrator_desc">"请分别检查长震动和短震动是否有效"</string>
    <string name="vibrator_long">"长震动"</string>
    <string name="vibrator_short">"短震动"</string>

    <!-- storage -->
    <string name="storage_title">"存储卡测试"</string>
    <string name="storage_plug_in">"请插入存储卡"</string>
    <string name="storage_check_play">"请检查是否有音乐播放"</string>

    <!-- camera -->
    <string name="camera_title">"相机测试"</string>
    <string name="camera_desc">"相机测试，点击屏幕开始"</string>

    <string name="call_title">"拨号测试"</string>

    <!-- flashlight -->
    <string name="flashlight_title">"闪光灯测试"</string>
    <string name="flashlight_desc">"检查闪光灯能否开启，点击屏幕开始"</string>

    <!-- touch -->
    <string name="touch_title">"触摸屏测试"</string>
    <string name="touch_desc">"请分别对屏幕边界和中心区域进行单指划线测试，双击屏幕完成"</string>

    <!-- compass -->
    <string name="compass_title">"指南针测试"</string>
    <string name="compass_accuracy">"精度值：%1$s"</string>
    <string name="compass_calibration">"请在空中划8字形以进行指南针校准"</string>
    <string name="compass_check_point">"请检查指南针是否指向正确，点击屏幕完成"</string>

    <!-- charger -->
    <string name="charger_title">"充电器测试"</string>
    <string name="charger_plug_in">"请插入充电器"</string>
    <string name="charger_plugged">"充电器已插入"</string>

    <!-- loopback -->
    <string name="loopback_title">"回环测试"</string>
    <string name="loopback_desc">"请对准麦克风大声说话或吹气，检查听筒是否有声音传出，点击屏幕开始"</string>

    <!-- microphone -->
    <string name="microphone_title">"麦克风气密性测试"</string>
    <string name="microphone_close_to">"请将终端靠近音源"</string>
    <string name="microphone_block">"请堵住麦克风口"</string>
    <string name="microphone_amplitude1">"堵前最大振幅："</string>
    <string name="microphone_amplitude2">"堵后最大振幅："</string>
    <string name="microphone_amp_value">"%1$d"</string>
    <string name="microphone_difference">"前后降幅："</string>
    <string name="microphone_diff_value">"%1$.2f%%"</string>
    <string name="microphone_suggest_pass">"建议通过"</string>
    <string name="microphone_suggest_fail">"建议不通过"</string>

    <!-- gsensor -->
    <string name="gsensor_title">"重力感应测试"</string>
    <string name="gsensor_portrait_start">"竖屏模式"</string>
    <string name="gsensor_portrait_success">"竖屏成功"</string>
    <string name="gsensor_portrait_next">"请横屏"</string>
    <string name="gsensor_landscape_start">"横屏模式"</string>
    <string name="gsensor_landscape_success">"横屏成功"</string>
    <string name="gsensor_landscape_next">"请竖屏"</string>

    <!-- proxsensor -->
    <string name="proxsensor_title">"接近感应测试"</string>
    <string name="proxsensor_signal">"信号值：%1$d"</string>
    <string name="proxsensor_cover">"请将手接近感应器用关闭屏幕,手拿开开启屏幕"</string>
    <string name="proxsensor_remove">"请将手拿开"</string>

    <!-- lightsensor -->
    <string name="lightsensor_title">"光感应测试"</string>
    <string name="lightsensor_desc">"请改变周围光线强度\n绿色级别表示当前光线级别\n蓝色级别表示达到的光线级别"</string>
    <string name="lightsensor_level_1">"级别1：0 &lt; X &lt;= 20"</string>
    <string name="lightsensor_level_2">"级别2：20 &lt; X &lt;= 1000"</string>
    <string name="lightsensor_level_3">"级别3：1000 &lt; X"</string>
    <string name="lightsensor_signal">"实时值：%1$d"</string>

    <!-- nfc -->
    <string name="nfc_title">"NFC测试"</string>
    <string name="nfc_turn_on">"请开启NFC后再测试"</string>
    <string name="nfc_check_tag">"请检查读取标签信息"</string>
    <string name="nfc_on">"NFC状态：开启"</string>
    <string name="nfc_off">"NFC状态：关闭"</string>
    <string name="nfc_tag_empty">"空标记"</string>
    <string name="nfc_tag_unknown">"未知的标记类型"</string>
    <string name="nfc_action_text">"向 %s 发送短信"</string>
    <string name="nfc_action_call">"呼叫 %s"</string>
    <string name="nfc_import_vcard">"导入 ^1"</string>
    <string name="nfc_vcard_title">"^1的联系人信息"</string>

    <!-- gyrosensor -->
    <string name="gyrosensor_title">"陀螺仪测试"</string>
    <string name="gyrosensor_desc">"请转动设备检查陀螺仪是否正常"</string>

    <!-- unknown -->
    <string name="unknown_title">"未知测试"</string>


    <string name="blutooth">蓝牙</string>
    <string name="Failed">失败</string>
    <string name="Success">成功</string>
    <string name="HeadSet_tips">请插入耳机进行测试！</string>
    <string name="headset">耳机</string>
    <string name="earphone">听筒</string>
    <string name="microphone">麦克风</string>
    <string name="vibrator">震动</string>
    <string name="auto_check_text">正在检测： %s</string>
    <string name="shop_name_inmap">%s-</string>
    <string name="this_cash_value">本次提现金额: ¥ %s</string>
    <string name="contact_custom">联系客服</string>
    <string name="custom_phone">客服电话： %s</string>
    <string name="check_time">检测时间 %s</string>
    <string name="yanji_time">验机时间 %s</string>
    <string name="sure">确定</string>
</resources>
