<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tool="http://schemas.android.com/tools"
              android:layout_width="match_parent" android:layout_height="match_parent"
              android:background="@color/white"
              android:orientation="vertical">

    <com.yc.phonerecycle.widget.SimpleToolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:toolbar_title="关于"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/logo"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/app_name"
            android:textColor="@color/c333333"
            android:textSize="14sp"
            android:layout_gravity="center_horizontal"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/banner"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/about_us_tip1"
            android:textColor="@color/c333333"
            android:textSize="14sp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/about_us_tip2"
            android:textColor="@color/c333333"
            android:textSize="14sp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/about_us_tip3"
            android:textColor="@color/c333333"
            android:textSize="14sp"
            android:autoLink="phone"/>
</LinearLayout>
