<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/cf7f8fa"
              android:orientation="vertical">

    <com.yc.phonerecycle.widget.SimpleToolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:toolbar_title="店铺信息"/>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:background="@drawable/bg_shop_info">
        <ImageView
                android:id="@+id/shopper_avatar"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:src="@drawable/ic_shop_avatar"/>
        <TextView
                android:id="@+id/shop_info_name_shopper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/shop_avatar"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:textStyle="bold"
                android:gravity="center_vertical"
                tools:text="@string/shop_name"
                android:textColor="@color/cfffefe"
                android:textSize="15sp"/>
        <TextView
                android:id="@+id/shop_info_addr_shopper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/shop_info_name"
                android:layout_below="@id/shop_info_name"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                tools:text="@string/about_us_tip2"
                android:textColor="@color/white"
                android:textSize="12sp"/>
    </RelativeLayout>

    <com.yc.phonerecycle.widget.SetItemLayout
            android:id="@+id/shopper_count"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:title="@string/shopper_count"
            app:title_width="270dp"
            app:title_color="@color/c080808"/>
    <com.yc.phonerecycle.widget.SetItemLayout
            android:id="@+id/admin_count"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:title="@string/admin_count"
            app:title_width="270dp"
            app:title_color="@color/c080808"/>

</LinearLayout>
