<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tool="http://schemas.android.com/tools"
              android:layout_width="match_parent" android:layout_height="match_parent"
              android:background="@color/cfafafa"
              android:orientation="vertical">

    <com.yc.phonerecycle.widget.SimpleToolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            app:toolbar_title="回收成功"/>
    <View
            android:id="@+id/divider"
            android:layout_width="match_parent" android:layout_height="0.5dp"
            android:background="@color/ceeeeee"/>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingBottom="20dp"
            android:orientation="vertical">
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_recycle_success"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:text="@string/recycle_dingdan_success"
                android:textColor="@color/c333333"
                android:textSize="18sp"/>


        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="55dp"
                android:layout_marginRight="55dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="@string/recycle_dingdan_success_tip"
                android:textColor="@color/c333333"
                android:textSize="14sp"/>
        <View
                android:layout_width="match_parent" android:layout_height="0.5dp"
                android:layout_marginTop="27dp"
                android:background="@color/ceeeeee"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="16dp"
                android:text="收货地址"
                android:textStyle="bold"
                android:textColor="@color/c333333"
                android:textSize="16sp"/>

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:id="@+id/order_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="16dp"
                    android:text="爱验机"
                    android:textColor="@color/c333333"
                    android:textSize="13sp"/>
            <TextView
                    android:id="@+id/order_phone_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_toRightOf="@id/order_name"
                    android:layout_marginLeft="40dp"
                    android:text="13754583212"
                    android:textColor="@color/c333333"
                    android:textSize="12sp"/>
            <TextView
                    android:id="@+id/order_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@id/order_phone_num"
                    android:layout_marginTop="10dp"
                    android:layout_below="@id/order_phone_num"
                    android:text="@string/order_address"
                    android:textColor="@color/c868686"
                    android:textSize="12sp"/>
        </RelativeLayout>
    </LinearLayout>


    <com.yc.phonerecycle.widget.SimpleCornerTextView
            android:id="@+id/back_home"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="40dp"
            app:bgColor="@color/c0168b7"
            app:radius="2.5dp"
            android:text="返回主页"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:gravity="center"/>

    <com.yc.phonerecycle.widget.SimpleCornerTextView
            android:id="@+id/order_detail"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            app:bgColor="@color/white"
            app:radius="2.5dp"
            android:text="查看订单"
            android:textSize="16sp"
            android:textColor="@color/c666666"
            android:gravity="center"
            app:borderColor="@color/cbbbbbb"
            app:borderWidth="0.5dp"/>
</LinearLayout>
