<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
                android:background="@color/black"
                android:keepScreenOn="true"
                android:orientation="vertical">

    <TextView
            android:id="@+id/lcd_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="45dip"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/lcd_desc"
            android:textAppearance="?android:attr/textAppearance" />

    <TextView
            android:id="@+id/lcd_color"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    <LinearLayout
            android:id="@+id/screen_container"
            android:layout_width="match_parent"
            android:layout_height="105dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_centerInParent="true"
            android:background="@drawable/hand_check_bg"
            android:orientation="vertical"
            android:visibility="gone">
        
        <LinearLayout 
                android:layout_width="match_parent" 
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center">
            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center">
                <CheckedTextView
                        android:id="@+id/shadow"
                        android:checked="false"
                        android:text="有阴影"
                        android:gravity="center"
                        android:textColor="@color/c333333"
                        android:textSize="15sp"
                        android:drawableLeft="?android:attr/listChoiceIndicatorMultiple"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center">
                <CheckedTextView
                        android:id="@+id/broken"
                        android:checked="false"
                        android:text="有坏点"
                        android:gravity="center"
                        android:textColor="@color/c333333"
                        android:textSize="15sp"
                        android:drawableLeft="?android:attr/listChoiceIndicatorMultiple"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center">
                <CheckedTextView
                        android:id="@+id/light"
                        android:checked="false"
                        android:text="有亮点"
                        android:gravity="center"
                        android:textColor="@color/c333333"
                        android:textSize="15sp"
                        android:drawableLeft="?android:attr/listChoiceIndicatorMultiple"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
            <com.yc.phonerecycle.widget.SimpleCornerTextView
                    android:id="@+id/next"
                    android:layout_width="match_parent"
                    android:layout_gravity="center"
                    android:layout_height="40dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:text="下一步"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    android:gravity="center"
                    app:bgColor="@color/c0168b7"
                    app:radius="4dp"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:visibility="gone"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_pass"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/pass_text" />

        <Button
            android:id="@+id/btn_fail"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/fail_text" />
    </LinearLayout>

</RelativeLayout>
